# industrial-anomaly-detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_fr.md  pyproject.toml
api/: database.py  inference.py  main.py
app/: app.py
datasets/: mvtec.py
evaluation/: metrics.py
models/: autoencoder.py  autoencoder_v2.py  patchcore.py
mvtec_dataset/: mvtec.py
notebooks/: 01_autoencoder_experiments.ipynb  02_patchcore_experiments.ipynb  03_embedding_analysis.ipynb  04_multicategory_benchmark.ipynb  05_final_comparison.ipynb
outputs/metrics/: 20260418_134126_capsule_patchcore_multiscale.json  20260418_141735_capsule_autoencoder_v2.json  20260426_162720_capsule_final_comparison_ae_v1.json  optimal_thresholds.json
scripts/: prepare_memory_banks.py
src/: config.py
training/: train_autoencoder.py
utils/: normalization.py
visualization/: heatmap.py
