[project]
name = "anomaly-detection-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Machoudi",email = "mabioladegounte@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "torch (>=2.12.1,<3.0.0)",
    "torchvision (>=0.27.1,<0.28.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.5.5"
ipykernel = "^7.2.0"

